--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,9 @@
       <div class="navbar" role="navigation">
         <div class="container">
           <div class="navbar-header">
-            <a class="navbar-brand" href="#/">workout todo</a>
+            <div class="logo" href="#/">
+              workout <b>plan</b>
+            </div>
           </div>
         </div>
       </div>
